fix(events): resolve session FK, proper Slf4j logging, fix @Builder.Default on AnonymousSession